--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".MainActivity"
+
     >
 
     <android.support.design.widget.AppBarLayout
@@ -25,6 +25,9 @@
     <include
         layout="@layout/content_main"
     />
+    <!--<FrameLayout android:id="@+id/content_frame"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
 
 
     <android.support.design.widget.FloatingActionButton
